# HelloWorld-cpprestsdk

./: .gitmodules  CMakeLists.txt  README.md  configure.sh  listen.cpp  reconfigure.sh  speak.cpp
buildCppRESTsdk/: .gitignore  README.md  buildCppRESTsdk.bat  installCppRESTsdk.sh  linBuildCppRESTsdk.sh  winBuildCppRESTsdk.sh
cmake/: FindCppREST.cmake
include/: stringBox.h
